--- a/src/clock.css
+++ b/src/clock.css
@@ -1,15 +1,26 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
+  font-family: sans-serif;
   margin: 0;
   padding: 0;
   overflow-y: hidden;
 }
-#root{
-  background-color:blue;
+
+#root {
+  position: absolute;
+  top: -110px;
+  background-color: black;
   width: 100%;
-  height: 100px;
+  height: 150px;
 }
-#timeNum{
+
+#timeNum {
+  position: absolute;
+  width: 100%;
   color: white;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 500;
+  font-family: sans-serif;
+  bottom: 0px;
+  line-height: 40px;
 }
