--- a/src/clock.css
+++ b/src/clock.css
@@ -1,8 +1,11 @@
+* {
+  overflow: hidden;
+}
+
 body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
-  overflow-y: hidden;
 }
 
 #root {
