--- a/src/clock.css
+++ b/src/clock.css
@@ -9,21 +9,56 @@ body {
 }
 
 #root {
-  position: absolute;
-  top: -110px;
-  background-color: black;
+  color: white;
   width: 100%;
-  height: 150px;
+  height: 80px;
+  align-items: stretch;
+}
+
+#root>div {
+  position: absolute;
+  text-align: center;
+  font-family: sans-serif;
+  font-weight: 500;
+  line-height: 40px;
+  transition: width 0.5s, top 0.5s, background-color 0.1s;
 }
 
 #timeNum {
-  position: absolute;
-  width: 100%;
-  color: white;
-  text-align: center;
+  background-color: black;
+  left: 0px;
+  top: 0px;
+  width: 120px;
+  height: 40px;
   font-size: 30px;
-  font-weight: 500;
-  font-family: sans-serif;
-  bottom: 0px;
-  line-height: 40px;
+}
+
+#timeNum-pause {
+  background-color: white;
+  color: black;
+  left: 0px;
+  top: 0px;
+  width: 200px;
+  height: 40px;
+  font-size: 30px;
+}
+
+#status-work {
+  left: 120px;
+  height: 80px;
+  width: 80px;
+  top: 0px;
+  font-size: 25px;
+}
+
+#status-break {
+  left: 120px;
+  height: 80px;
+  width: 80px;
+  top: -40px;
+  font-size: 25px;
+}
+
+#sts-item {
+  height: 40px;
 }
