--- a/src/clock.css
+++ b/src/clock.css
@@ -1,64 +1,79 @@
 * {
   overflow: hidden;
+  text-align: center;
+  transition: top 0.3s cubic-bezier(0.68, -0.01, 0.05, 1.48), width 0.3s cubic-bezier(0.68, -0.01, 0.05, 1.48);
 }
 
 body {
-  font-family: sans-serif;
+  font-family: Microsoft JhengHei;
+  font-weight: bold;
   margin: 0;
   padding: 0;
 }
 
 #root {
-  color: white;
-  width: 100%;
-  height: 80px;
-  align-items: stretch;
-}
-
-#root>div {
   position: absolute;
-  text-align: center;
-  font-family: sans-serif;
-  font-weight: 500;
-  line-height: 40px;
-  transition: width 0.5s, top 0.5s, background-color 0.1s;
+  top: 0px;
+  width: 100%;
+  height: 100%;
 }
 
-#timeNum {
+.content {
+  position: absolute;
+  left: 5px;
+  color: white;
   background-color: black;
-  left: 0px;
-  top: 0px;
-  width: 120px;
-  height: 40px;
-  font-size: 30px;
-}
-
-#timeNum-pause {
-  background-color: white;
-  color: black;
-  left: 0px;
-  top: 0px;
   width: 200px;
-  height: 40px;
-  font-size: 30px;
+  height: 35px;
+  align-items: stretch;
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.3);
+  border-radius: 0px 0px 4px 4px;
 }
 
-#status-work {
-  left: 120px;
-  height: 80px;
-  width: 80px;
+.play {
+  top: -5px;
+}
+
+.stop {
+  top: -30px;
+}
+
+.timeNum {
+  position: absolute;
+  background-color: black;
+  left: 100px;
   top: 0px;
+  width: 100px;
+  height: 40px;
   font-size: 25px;
+  line-height: 38px;
 }
 
-#status-break {
-  left: 120px;
+.status {
+  position: absolute;
+  left: 0px;
   height: 80px;
-  width: 80px;
-  top: -40px;
-  font-size: 25px;
+  top: -5px;
+  font-size: 22px;
+  line-height: 39px;
 }
 
-#sts-item {
+.work {
+  top: -40px;
+}
+
+.break {
+  top: 0px;
+}
+
+.s-stop {
+  width: 200px;
+}
+
+.s-play {
+  width: 100px;
+}
+
+.sts-item {
   height: 40px;
 }
