--- a/src/clock.css
+++ b/src/clock.css
@@ -1,7 +1,6 @@
 * {
   overflow: hidden;
   text-align: center;
-  transition: top 0.3s cubic-bezier(0.68, -0.01, 0.05, 1.48), width 0.3s cubic-bezier(0.68, -0.01, 0.05, 1.48);
 }
 
 body {
@@ -28,13 +27,14 @@ body {
   align-items: stretch;
   box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.3);
   border-radius: 0px 0px 4px 4px;
+  transition: top 0.3s cubic-bezier(0.68, -0.01, 0.05, 1.48);
 }
 
-.play {
+.notice {
   top: -5px;
 }
 
-.stop {
+.normal {
   top: -30px;
 }
 
@@ -53,9 +53,9 @@ body {
   position: absolute;
   left: 0px;
   height: 80px;
-  top: -5px;
   font-size: 22px;
   line-height: 39px;
+  transition: all 0.3s cubic-bezier(0.68, -0.01, 0.10, 1.20);
 }
 
 .work {
@@ -67,11 +67,11 @@ body {
 }
 
 .s-stop {
-  width: 200px;
+  width: 100%;
 }
 
 .s-play {
-  width: 100px;
+  width: 50%;
 }
 
 .sts-item {
